[project]
name = "test-pymlg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "navlie",
    "pymlg",
]

[tool.uv.sources]
pymlg = { git = "https://github.com/decargroup/pymlg.git", rev = "e0bfac9" }
navlie = { git = "https://github.com/decargroup/navlie.git", rev = "6b173fc"}
